--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Calculadora de Staminas</title>
+  <title>Calculadora de Stamina</title>
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -301,4 +301,5 @@
 </script>
 </body>
 </html>
+
 
