--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="manifest" href="/stamina/manifest.json" />
+  <meta name="theme-color" content="#6c63ff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
   <title>Calculadora de Stamina</title>
   <style>
@@ -301,5 +304,6 @@
 </script>
 </body>
 </html>
+
 
 
