Add inputmode attribute to stamina inputs

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
     <div class="conteudo active">
       <label>Stamina atual</label>
-      <input id="staminaAtual2" maxlength="5" placeholder="38:36" />
+      <input inputmode="numeric" id="staminaAtual2" maxlength="5" placeholder="38:36" />
 
       <label>Stamina desejada</label>
-      <input id="staminaDesejada" maxlength="5" placeholder="42:00" />
+      <input inputmode="numeric" id="staminaDesejada" maxlength="5" placeholder="42:00" />
 
       <button onclick="calcularHoraAgora()">Calcular horário</button>
       <div id="resultado3" class="resultado"></div>
@@ -116,7 +116,7 @@
 
     <div class="conteudo">
       <label>Stamina conhecida</label>
-      <input id="staminaBase2" maxlength="5" placeholder="39:00" />
+      <input inputmode="numeric" id="staminaBase2" maxlength="5" placeholder="39:00" />
 
       <label>Data e hora dessa stamina</label>
       <div class="linha">
@@ -125,7 +125,7 @@
       </div>
 
       <label>Stamina desejada</label>
-      <input id="staminaDesejada2" maxlength="5" placeholder="42:00" />
+      <input inputmode="numeric" id="staminaDesejada2" maxlength="5" placeholder="42:00" />
 
       <button onclick="calcularHoraFutura()">Calcular horário</button>
       <div id="resultado4" class="resultado"></div>
@@ -143,7 +143,7 @@
 
     <div class="conteudo active">
       <label>Stamina atual</label>
-      <input id="staminaAtual" maxlength="5" placeholder="38:36" />
+      <input inputmode="numeric" id="staminaAtual" maxlength="5" placeholder="38:36" />
 
       <label>Data e hora alvo</label>
       <div class="linha">
@@ -157,7 +157,7 @@
 
     <div class="conteudo">
       <label>Stamina conhecida</label>
-      <input id="staminaBase" maxlength="5" placeholder="39:00" />
+      <input inputmode="numeric" id="staminaBase" maxlength="5" placeholder="39:00" />
 
       <label>Data e hora dessa stamina</label>
       <div class="linha">
@@ -382,5 +382,6 @@ document
 </script>
 </body>
 </html>
+
 
 
